@@ -14,7 +14,6 @@ proximity-evdev_match_name = gpio-keys
 als_dev_path_rm680 = /dev/bh1770glc_als
 als_dev_path_rm696 = /dev/apds990x0
 
-
 # ALS adaptor sysfs for Nokia N900
 als-sysfs_path = /sys/devices/platform/i2c_omap.2/i2c-2/2-0029/device0/illuminance0_input
 
@@ -36,10 +35,10 @@ magnetometer_scale_coefficient = 300
 # Orientation parameters
 orientation_threshold_landscape = 25
 orientation_threshold_portrait = 20
-orientation_overflow_min = 800
-orientation_overflow_max = 1250
-orientation_poll_interval = 1000
-orientation_buffer_size = 10
+# orientation_overflow_min = 800
+# orientation_overflow_max = 1250
+orientation_poll_interval = 100
+orientation_buffer_size = 4
 
 # Offset for Screen.TopEdge. If 0, Screen.TopEdge equals side edges from
 # OrientationSensor. Each additional value rotates the top one step to
