@@ -90,9 +90,7 @@ private:
     int orientationCheck(const AccelerationData&, OrientationMode) const;
     PoseData orientationRotation(const AccelerationData&, OrientationMode, PoseData (OrientationInterpreter::*)(int));
 
-    static const int DEFAULT_THRESHOLD;
     static const float RADIANS_TO_DEGREES;
-    static const int ANGLE_LIMIT;
     static const int SAME_AXIS_LIMIT;
 
     static const int OVERFLOW_MIN;
