@@ -13,6 +13,7 @@ sensord (0.6.41) unstable; urgency=low
   * Downsampling (which works by dropping samples) can be now enabled/disabled.
   * OrientationInterpreter filter orientation_buffer_size is now configurable.
   * Threshold accessors removed from OrientationFilter since those had no effect.
+  * OrientationInterpreter default settings now provide more sensitive orientation detection. Fixes: NB#232872.
 
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Mon, 07 Mar 2011 16:17:54 +0200
 
